--- a/market.ui
+++ b/market.ui
@@ -36,7 +36,7 @@
      <enum>Qt::RightToLeft</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideNone</enum>
@@ -1854,7 +1854,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <property name="documentMode">
        <bool>false</bool>
@@ -2884,7 +2884,7 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>60</y>
+           <y>62</y>
            <width>191</width>
            <height>20</height>
           </rect>
@@ -2902,7 +2902,7 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>92</y>
+           <y>90</y>
            <width>191</width>
            <height>20</height>
           </rect>
@@ -2920,7 +2920,7 @@
          <property name="geometry">
           <rect>
            <x>210</x>
-           <y>154</y>
+           <y>176</y>
            <width>61</width>
            <height>20</height>
           </rect>
@@ -2938,7 +2938,7 @@
          <property name="geometry">
           <rect>
            <x>210</x>
-           <y>190</y>
+           <y>205</y>
            <width>61</width>
            <height>20</height>
           </rect>
@@ -2956,7 +2956,7 @@
          <property name="geometry">
           <rect>
            <x>210</x>
-           <y>120</y>
+           <y>148</y>
            <width>61</width>
            <height>20</height>
           </rect>
@@ -2974,7 +2974,7 @@
          <property name="geometry">
           <rect>
            <x>200</x>
-           <y>90</y>
+           <y>91</y>
            <width>71</width>
            <height>20</height>
           </rect>
@@ -2992,7 +2992,7 @@
          <property name="geometry">
           <rect>
            <x>210</x>
-           <y>60</y>
+           <y>62</y>
            <width>61</width>
            <height>20</height>
           </rect>
@@ -3010,7 +3010,7 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>125</y>
+           <y>148</y>
            <width>191</width>
            <height>20</height>
           </rect>
@@ -3037,7 +3037,7 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>157</y>
+           <y>176</y>
            <width>191</width>
            <height>20</height>
           </rect>
@@ -3094,6 +3094,11 @@
          <column>
           <property name="text">
            <string>المستخدم</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>رقم المجموعة</string>
           </property>
          </column>
         </widget>
@@ -3182,7 +3187,7 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>190</y>
+           <y>205</y>
            <width>191</width>
            <height>20</height>
           </rect>
@@ -3191,6 +3196,39 @@
           <font>
            <pointsize>12</pointsize>
           </font>
+         </property>
+        </widget>
+        <widget class="QComboBox" name="comboBox_21">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>119</y>
+           <width>191</width>
+           <height>20</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_140">
+         <property name="geometry">
+          <rect>
+           <x>210</x>
+           <y>119</y>
+           <width>61</width>
+           <height>20</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>اسم المجموعة</string>
          </property>
         </widget>
        </widget>
