--- a/market.ui
+++ b/market.ui
@@ -36,7 +36,7 @@
      <enum>Qt::RightToLeft</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>5</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideNone</enum>
@@ -5330,27 +5330,27 @@
         </column>
         <column>
          <property name="text">
-          <string>الرقم المرجعي</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
           <string>اسم الصنف</string>
          </property>
         </column>
         <column>
          <property name="text">
-          <string>رقم فاتورة المورد</string>
+          <string>كود الصنف</string>
          </property>
         </column>
         <column>
          <property name="text">
-          <string>وحدة الشراء</string>
+          <string>الوحدة</string>
          </property>
         </column>
         <column>
          <property name="text">
-          <string>عدد الوحدات</string>
+          <string>رقم الفاتورة</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>اسم المورد</string>
          </property>
         </column>
         <column>
@@ -5360,65 +5360,30 @@
         </column>
         <column>
          <property name="text">
-          <string>وحدة البيع</string>
+          <string>الكمية</string>
          </property>
         </column>
         <column>
          <property name="text">
-          <string>عدد القطع في الوحدة</string>
+          <string>الخصم</string>
          </property>
         </column>
         <column>
          <property name="text">
-          <string>سعر شراء القطعة</string>
+          <string>سعر البيع</string>
          </property>
         </column>
         <column>
          <property name="text">
-          <string>سعر القطعة للجمهور</string>
+          <string>إجمالي الصنف</string>
          </property>
         </column>
-        <column>
-         <property name="text">
-          <string>إجمالي الشراء</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>إجمالي البيع للجمهور</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>مصاريف اضافية</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>الربح المتوقع</string>
-         </property>
-        </column>
-       </widget>
-       <widget class="QComboBox" name="comboBox_12">
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>210</y>
-          <width>151</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>12</pointsize>
-         </font>
-        </property>
        </widget>
        <widget class="QLabel" name="label_81">
         <property name="geometry">
          <rect>
-          <x>216</x>
-          <y>210</y>
+          <x>210</x>
+          <y>80</y>
           <width>71</width>
           <height>25</height>
          </rect>
@@ -5459,8 +5424,8 @@
         </property>
         <property name="geometry">
          <rect>
-          <x>670</x>
-          <y>180</y>
+          <x>20</x>
+          <y>120</y>
           <width>151</width>
           <height>24</height>
          </rect>
@@ -5469,27 +5434,6 @@
          <font>
           <pointsize>14</pointsize>
          </font>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_55">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>150</y>
-          <width>151</width>
-          <height>25</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>14</pointsize>
-         </font>
-        </property>
-        <property name="inputMethodHints">
-         <set>Qt::ImhDigitsOnly|Qt::ImhFormattedNumbersOnly</set>
         </property>
         <property name="text">
          <string>0</string>
@@ -5502,7 +5446,7 @@
         <property name="geometry">
          <rect>
           <x>860</x>
-          <y>91</y>
+          <y>113</y>
           <width>91</width>
           <height>25</height>
          </rect>
@@ -5523,7 +5467,7 @@
         <property name="geometry">
          <rect>
           <x>670</x>
-          <y>117</y>
+          <y>190</y>
           <width>151</width>
           <height>25</height>
          </rect>
@@ -5537,7 +5481,7 @@
          <set>Qt::ImhDigitsOnly|Qt::ImhFormattedNumbersOnly</set>
         </property>
         <property name="text">
-         <string>0</string>
+         <string/>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -5550,7 +5494,7 @@
         <property name="geometry">
          <rect>
           <x>670</x>
-          <y>88</y>
+          <y>110</y>
           <width>151</width>
           <height>24</height>
          </rect>
@@ -5579,8 +5523,8 @@
         </property>
         <property name="geometry">
          <rect>
-          <x>670</x>
-          <y>210</y>
+          <x>20</x>
+          <y>160</y>
           <width>151</width>
           <height>25</height>
          </rect>
@@ -5597,29 +5541,11 @@
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
-       <widget class="QLabel" name="label_80">
-        <property name="geometry">
-         <rect>
-          <x>220</x>
-          <y>150</y>
-          <width>69</width>
-          <height>19</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>10</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>إضافة مصروفات</string>
-        </property>
-       </widget>
        <widget class="QLabel" name="label_97">
         <property name="geometry">
          <rect>
           <x>860</x>
-          <y>61</y>
+          <y>72</y>
           <width>91</width>
           <height>25</height>
          </rect>
@@ -5637,7 +5563,7 @@
         <property name="geometry">
          <rect>
           <x>860</x>
-          <y>121</y>
+          <y>154</y>
           <width>91</width>
           <height>25</height>
          </rect>
@@ -5654,8 +5580,8 @@
        <widget class="QLabel" name="label_94">
         <property name="geometry">
          <rect>
-          <x>880</x>
-          <y>214</y>
+          <x>210</x>
+          <y>164</y>
           <width>71</width>
           <height>25</height>
          </rect>
@@ -5669,53 +5595,11 @@
          <string>إجمالي الشراء</string>
         </property>
        </widget>
-       <widget class="QLabel" name="label_79">
-        <property name="geometry">
-         <rect>
-          <x>200</x>
-          <y>122</y>
-          <width>92</width>
-          <height>19</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>10</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>اجمالي البيع للجمهور</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_54">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>120</y>
-          <width>151</width>
-          <height>25</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>14</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>0</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
        <widget class="QLabel" name="label_100">
         <property name="geometry">
          <rect>
-          <x>860</x>
-          <y>183</y>
+          <x>190</x>
+          <y>123</y>
           <width>91</width>
           <height>25</height>
          </rect>
@@ -5750,7 +5634,7 @@
          <set>Qt::ImhDigitsOnly|Qt::ImhFormattedNumbersOnly</set>
         </property>
         <property name="text">
-         <string>1</string>
+         <string/>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -5760,7 +5644,7 @@
         <property name="geometry">
          <rect>
           <x>180</x>
-          <y>94</y>
+          <y>204</y>
           <width>108</width>
           <height>19</height>
          </rect>
@@ -5774,30 +5658,6 @@
          <string>سعر بيع الوحدة للجمهور</string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_53">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>180</y>
-          <width>151</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>14</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>0</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
        <widget class="QLineEdit" name="lineEdit_68">
         <property name="enabled">
          <bool>true</bool>
@@ -5805,7 +5665,7 @@
         <property name="geometry">
          <rect>
           <x>670</x>
-          <y>59</y>
+          <y>30</y>
           <width>151</width>
           <height>24</height>
          </rect>
@@ -5823,7 +5683,7 @@
         <property name="geometry">
          <rect>
           <x>20</x>
-          <y>90</y>
+          <y>200</y>
           <width>151</width>
           <height>25</height>
          </rect>
@@ -5847,7 +5707,7 @@
         <property name="geometry">
          <rect>
           <x>810</x>
-          <y>154</y>
+          <y>194</y>
           <width>141</width>
           <height>25</height>
          </rect>
@@ -5859,24 +5719,6 @@
         </property>
         <property name="text">
          <string>الخصم %</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_78">
-        <property name="geometry">
-         <rect>
-          <x>227</x>
-          <y>178</y>
-          <width>62</width>
-          <height>19</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>10</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>الربح المتوقع</string>
         </property>
        </widget>
        <widget class="QLineEdit" name="lineEdit_72">
@@ -5906,9 +5748,9 @@
        <widget class="QLabel" name="label_101">
         <property name="geometry">
          <rect>
-          <x>190</x>
+          <x>200</x>
           <y>40</y>
-          <width>101</width>
+          <width>81</width>
           <height>20</height>
          </rect>
         </property>
@@ -5928,7 +5770,7 @@
         <property name="geometry">
          <rect>
           <x>670</x>
-          <y>30</y>
+          <y>70</y>
           <width>151</width>
           <height>24</height>
          </rect>
@@ -5961,51 +5803,6 @@
         </property>
         <property name="text">
          <string>اسم الصنف</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_74">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>61</y>
-          <width>151</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>14</pointsize>
-         </font>
-        </property>
-        <property name="inputMethodHints">
-         <set>Qt::ImhDigitsOnly|Qt::ImhFormattedNumbersOnly</set>
-        </property>
-        <property name="text">
-         <string>0</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_103">
-        <property name="geometry">
-         <rect>
-          <x>210</x>
-          <y>66</y>
-          <width>77</width>
-          <height>19</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>10</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>سعر شراء القطعة</string>
         </property>
        </widget>
        <widget class="QPushButton" name="pushButton_34">
@@ -6108,6 +5905,21 @@
         </property>
         <property name="text">
          <string>رجــــوع</string>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="comboBox_24">
+        <property name="geometry">
+         <rect>
+          <x>18</x>
+          <y>80</y>
+          <width>151</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
         </property>
        </widget>
       </widget>
