--- a/market.ui
+++ b/market.ui
@@ -5440,9 +5440,9 @@
         </property>
         <property name="geometry">
          <rect>
-          <x>600</x>
+          <x>640</x>
           <y>110</y>
-          <width>221</width>
+          <width>181</width>
           <height>24</height>
          </rect>
         </property>
@@ -5853,6 +5853,38 @@
         <property name="text">
          <string>رجــــوع</string>
         </property>
+       </widget>
+       <widget class="QPushButton" name="pushButton_66">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="geometry">
+         <rect>
+          <x>608</x>
+          <y>110</y>
+          <width>31</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>16</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>▼</string>
+        </property>
+       </widget>
+       <widget class="QWidget" name="gridLayoutWidget">
+        <property name="geometry">
+         <rect>
+          <x>450</x>
+          <y>130</y>
+          <width>191</width>
+          <height>221</height>
+         </rect>
+        </property>
+        <layout class="QGridLayout" name="gridLayout"/>
        </widget>
       </widget>
       <widget class="QWidget" name="tab_14">
