--- a/market.ui
+++ b/market.ui
@@ -4465,7 +4465,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab_12">
        <attribute name="title">
@@ -6691,7 +6691,7 @@
       <property name="geometry">
        <rect>
         <x>930</x>
-        <y>60</y>
+        <y>65</y>
         <width>26</width>
         <height>19</height>
        </rect>
@@ -6709,7 +6709,7 @@
       <property name="geometry">
        <rect>
         <x>770</x>
-        <y>55</y>
+        <y>60</y>
         <width>141</width>
         <height>24</height>
        </rect>
@@ -6829,7 +6829,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>200</y>
+        <y>260</y>
         <width>725</width>
         <height>207</height>
        </rect>
@@ -6887,7 +6887,7 @@
       <property name="geometry">
        <rect>
         <x>750</x>
-        <y>380</y>
+        <y>440</y>
         <width>141</width>
         <height>25</height>
        </rect>
@@ -6908,7 +6908,7 @@
       <property name="geometry">
        <rect>
         <x>890</x>
-        <y>382</y>
+        <y>442</y>
         <width>81</width>
         <height>25</height>
        </rect>
@@ -6923,48 +6923,6 @@
       </property>
      </widget>
      <widget class="QLineEdit" name="lineEdit_61">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>750</x>
-        <y>200</y>
-        <width>141</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>0</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_116">
-      <property name="geometry">
-       <rect>
-        <x>890</x>
-        <y>202</y>
-        <width>81</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>إجمالي الفاتورة</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEdit_62">
       <property name="enabled">
        <bool>false</bool>
       </property>
@@ -6988,11 +6946,53 @@
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
+     <widget class="QLabel" name="label_116">
+      <property name="geometry">
+       <rect>
+        <x>890</x>
+        <y>262</y>
+        <width>81</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>إجمالي الفاتورة</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_62">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>750</x>
+        <y>320</y>
+        <width>141</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>0</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
      <widget class="QLabel" name="label_117">
       <property name="geometry">
        <rect>
         <x>900</x>
-        <y>262</y>
+        <y>322</y>
         <width>71</width>
         <height>25</height>
        </rect>
@@ -7010,7 +7010,7 @@
       <property name="geometry">
        <rect>
         <x>940</x>
-        <y>232</y>
+        <y>292</y>
         <width>31</width>
         <height>25</height>
        </rect>
@@ -7031,7 +7031,7 @@
       <property name="geometry">
        <rect>
         <x>750</x>
-        <y>230</y>
+        <y>290</y>
         <width>141</width>
         <height>25</height>
        </rect>
@@ -7055,7 +7055,7 @@
       <property name="geometry">
        <rect>
         <x>360</x>
-        <y>150</y>
+        <y>210</y>
         <width>91</width>
         <height>38</height>
        </rect>
@@ -7076,7 +7076,7 @@
       <property name="geometry">
        <rect>
         <x>470</x>
-        <y>150</y>
+        <y>210</y>
         <width>84</width>
         <height>38</height>
        </rect>
@@ -7094,7 +7094,7 @@
       <property name="geometry">
        <rect>
         <x>500</x>
-        <y>430</y>
+        <y>490</y>
         <width>121</width>
         <height>38</height>
        </rect>
@@ -7112,7 +7112,7 @@
       <property name="geometry">
        <rect>
         <x>895</x>
-        <y>105</y>
+        <y>165</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -7130,7 +7130,7 @@
       <property name="geometry">
        <rect>
         <x>612</x>
-        <y>102</y>
+        <y>162</y>
         <width>51</width>
         <height>20</height>
        </rect>
@@ -7151,7 +7151,7 @@
       <property name="geometry">
        <rect>
         <x>245</x>
-        <y>100</y>
+        <y>160</y>
         <width>51</width>
         <height>24</height>
        </rect>
@@ -7173,7 +7173,7 @@
       <property name="geometry">
        <rect>
         <x>300</x>
-        <y>102</y>
+        <y>162</y>
         <width>31</width>
         <height>20</height>
        </rect>
@@ -7194,7 +7194,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>100</y>
+        <y>160</y>
         <width>91</width>
         <height>24</height>
        </rect>
@@ -7212,7 +7212,7 @@
       <property name="geometry">
        <rect>
         <x>120</x>
-        <y>105</y>
+        <y>162</y>
         <width>71</width>
         <height>21</height>
        </rect>
@@ -7233,7 +7233,7 @@
       <property name="geometry">
        <rect>
         <x>570</x>
-        <y>150</y>
+        <y>210</y>
         <width>101</width>
         <height>38</height>
        </rect>
@@ -7251,7 +7251,7 @@
       <property name="geometry">
        <rect>
         <x>680</x>
-        <y>100</y>
+        <y>160</y>
         <width>231</width>
         <height>26</height>
        </rect>
@@ -7269,7 +7269,7 @@
       <property name="geometry">
        <rect>
         <x>500</x>
-        <y>100</y>
+        <y>160</y>
         <width>101</width>
         <height>24</height>
        </rect>
@@ -7332,7 +7332,7 @@
       <property name="geometry">
        <rect>
         <x>750</x>
-        <y>290</y>
+        <y>350</y>
         <width>141</width>
         <height>25</height>
        </rect>
@@ -7353,7 +7353,7 @@
       <property name="geometry">
        <rect>
         <x>900</x>
-        <y>292</y>
+        <y>352</y>
         <width>71</width>
         <height>25</height>
        </rect>
@@ -7374,7 +7374,7 @@
       <property name="geometry">
        <rect>
         <x>750</x>
-        <y>320</y>
+        <y>380</y>
         <width>141</width>
         <height>25</height>
        </rect>
@@ -7395,7 +7395,7 @@
       <property name="geometry">
        <rect>
         <x>900</x>
-        <y>322</y>
+        <y>382</y>
         <width>71</width>
         <height>25</height>
        </rect>
@@ -7416,7 +7416,7 @@
       <property name="geometry">
        <rect>
         <x>750</x>
-        <y>350</y>
+        <y>410</y>
         <width>141</width>
         <height>25</height>
        </rect>
@@ -7437,7 +7437,7 @@
       <property name="geometry">
        <rect>
         <x>900</x>
-        <y>352</y>
+        <y>412</y>
         <width>71</width>
         <height>25</height>
        </rect>
@@ -7455,7 +7455,7 @@
       <property name="geometry">
        <rect>
         <x>450</x>
-        <y>103</y>
+        <y>163</y>
         <width>31</width>
         <height>20</height>
        </rect>
@@ -7476,7 +7476,7 @@
       <property name="geometry">
        <rect>
         <x>370</x>
-        <y>100</y>
+        <y>160</y>
         <width>71</width>
         <height>24</height>
        </rect>
@@ -7621,7 +7621,7 @@
       <property name="geometry">
        <rect>
         <x>340</x>
-        <y>430</y>
+        <y>490</y>
         <width>121</width>
         <height>38</height>
        </rect>
@@ -7642,7 +7642,7 @@
       <property name="geometry">
        <rect>
         <x>215</x>
-        <y>100</y>
+        <y>160</y>
         <width>31</width>
         <height>25</height>
        </rect>
@@ -7660,12 +7660,129 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>170</y>
+        <y>230</y>
         <width>191</width>
         <height>221</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout"/>
+     </widget>
+     <widget class="QComboBox" name="comboBox_24">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>510</x>
+        <y>60</y>
+        <width>181</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_143">
+      <property name="geometry">
+       <rect>
+        <x>680</x>
+        <y>62</y>
+        <width>61</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>اسم العميل</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_97">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>60</y>
+        <width>181</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_144">
+      <property name="geometry">
+       <rect>
+        <x>460</x>
+        <y>63</y>
+        <width>31</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>الهاتف</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_145">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>100</y>
+        <width>31</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>العنوان</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_98">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>510</x>
+        <y>97</y>
+        <width>191</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
      </widget>
      <zorder>label_90</zorder>
      <zorder>timeEdit_11</zorder>
@@ -7713,6 +7830,12 @@
      <zorder>pushButton_66</zorder>
      <zorder>gridLayoutWidget</zorder>
      <zorder>tableWidget_13</zorder>
+     <zorder>comboBox_24</zorder>
+     <zorder>label_143</zorder>
+     <zorder>lineEdit_97</zorder>
+     <zorder>label_144</zorder>
+     <zorder>label_145</zorder>
+     <zorder>lineEdit_98</zorder>
     </widget>
     <widget class="QWidget" name="tab_16">
      <attribute name="title">
