--- a/market.ui
+++ b/market.ui
@@ -6851,12 +6851,12 @@
       </property>
       <column>
        <property name="text">
-        <string>الكــود</string>
+        <string>الصنف</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>الصنف</string>
+        <string>الكــود</string>
        </property>
       </column>
       <column>
@@ -6872,6 +6872,11 @@
       <column>
        <property name="text">
         <string>الكمية</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>الخصم</string>
        </property>
       </column>
       <column>
@@ -7112,7 +7117,7 @@
       <property name="geometry">
        <rect>
         <x>895</x>
-        <y>165</y>
+        <y>137</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -7129,8 +7134,8 @@
      <widget class="QLabel" name="label_120">
       <property name="geometry">
        <rect>
-        <x>612</x>
-        <y>162</y>
+        <x>902</x>
+        <y>172</y>
         <width>51</width>
         <height>20</height>
        </rect>
@@ -7251,7 +7256,7 @@
       <property name="geometry">
        <rect>
         <x>680</x>
-        <y>160</y>
+        <y>137</y>
         <width>231</width>
         <height>26</height>
        </rect>
@@ -7268,8 +7273,8 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>500</x>
-        <y>160</y>
+        <x>790</x>
+        <y>170</y>
         <width>101</width>
         <height>24</height>
        </rect>
@@ -7454,8 +7459,8 @@
      <widget class="QLabel" name="label_127">
       <property name="geometry">
        <rect>
-        <x>450</x>
-        <y>163</y>
+        <x>740</x>
+        <y>173</y>
         <width>31</width>
         <height>20</height>
        </rect>
@@ -7475,8 +7480,8 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>370</x>
-        <y>160</y>
+        <x>660</x>
+        <y>170</y>
         <width>71</width>
         <height>24</height>
        </rect>
@@ -7784,6 +7789,90 @@
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
+     <widget class="QLineEdit" name="lineEdit_99">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>170</y>
+        <width>101</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>0</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_146">
+      <property name="geometry">
+       <rect>
+        <x>573</x>
+        <y>173</y>
+        <width>41</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>الخصم</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_74">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>750</x>
+        <y>470</y>
+        <width>141</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_147">
+      <property name="geometry">
+       <rect>
+        <x>890</x>
+        <y>472</y>
+        <width>81</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>عدد القطع</string>
+      </property>
+     </widget>
      <zorder>label_90</zorder>
      <zorder>timeEdit_11</zorder>
      <zorder>label_112</zorder>
@@ -7836,6 +7925,10 @@
      <zorder>label_144</zorder>
      <zorder>label_145</zorder>
      <zorder>lineEdit_98</zorder>
+     <zorder>lineEdit_99</zorder>
+     <zorder>label_146</zorder>
+     <zorder>lineEdit_74</zorder>
+     <zorder>label_147</zorder>
     </widget>
     <widget class="QWidget" name="tab_16">
      <attribute name="title">
